# controlpanelnewlayout

./: .gitignore  CMakeLists.txt  ControlPanelButton.qml  ControlPanelNew.qml  README.md  controlpanelNewLayout_zh_CN.ts  controlpanelconnector.cpp  controlpanelconnector.h  dbus_obj.cpp  dbus_obj.h  dbus_receive_key_signal.cpp  dbus_receive_key_signal.h  logger.c  loggerconf.c  loggerconf.h  main.cpp  main.qml  main_origin.qml  qml.qrc  run_cp_testing.sh
